--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mocha": "^11.5.0",
+    "mocha-junit-reporter": "^2.2.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
