--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "validator": "^13.15.0"
   },
   "dependencies": {
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
