--- a/.github/workflows/dependency-audit.yml
+++ b/.github/workflows/dependency-audit.yml
@@ -18,10 +18,10 @@ on:
         - pdf
         - json
   push:
-    branches: ['**']
+    branches: ['main', 'master', 'develop', '**']
     paths: ['package.json', 'package-lock.json', 'yarn.lock']
   pull_request:
-    branches: ['**']
+    branches: ['main', 'master', 'develop', '**']
     paths: ['package.json', 'package-lock.json', 'yarn.lock']
   schedule:
     - cron: '0 2 * * 1' # Lunes a las 2 AM
