--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.16.0",
+    "pino-pretty": "^13.0.0",
     "supertest": "^7.1.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.0"
   },
   "dependencies": {
+    "pino": "^9.7.0",
     "qs": "^6.14.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
