--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,21 @@ services:
       - "1010:1010"
     environment:
       - PORT=1010
+      - MONGO_URI=mongodb://mongo:27017/raizfinanciera
+      # Agrega aquí otras variables de entorno necesarias
+    depends_on:
+      - mongo
     volumes:
       - .:/usr/src/app
     restart: unless-stopped
+
+  mongo:
+    image: mongo:6
+    container_name: mongo
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+
+volumes:
+  mongo_data:
