--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
-    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mocha": "^11.5.0",
@@ -54,6 +53,7 @@
     "pino": "^9.7.0",
     "qs": "^6.14.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.25.67"
   }
 }
